--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirerer": "^0.1.3",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "promise-mysql": "^5.0.3"
   }
 }
